// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App tests should render Favorites Page correctly 1`] = `
<div>
  <div>
    <div>
      <header>
        <nav
          class="sc-dlfnbm VWpaN"
        >
          <a
            href="/"
          >
            Home
          </a>
           | 
          <a
            href="/favorites"
          >
            Favorites
          </a>
        </nav>
      </header>
    </div>
    <div>
      Fav Mock
    </div>
  </div>
  <div
    class="notification-container notification-container-empty"
  >
    <div />
  </div>
</div>
`;

exports[`App tests should render Home Page correctly 1`] = `
<div>
  <div>
    <div>
      <header>
        <nav
          class="sc-dlfnbm VWpaN"
        >
          <a
            href="/"
          >
            Home
          </a>
           | 
          <a
            href="/favorites"
          >
            Favorites
          </a>
        </nav>
      </header>
    </div>
    <div>
      Pick Mock
    </div>
  </div>
  <div
    class="notification-container notification-container-empty"
  >
    <div />
  </div>
</div>
`;
